--- a/src/styles/PreHeader.module.css
+++ b/src/styles/PreHeader.module.css
@@ -1,6 +1,6 @@
 .wrapper{
     width: 100%;
-    padding-top: 6%;
+    padding-top: 50px;
     padding-right: 7%;
     padding-left: 7%;
     padding-bottom: 15px;
@@ -26,6 +26,7 @@
 
 @media screen and (max-width:1025px){
     .wrapper{
+        padding-top: 25px;
         justify-content: space-between;
     }
     .smallLogoWrapper{
